--- a/_config.yml
+++ b/_config.yml
@@ -80,7 +80,7 @@ pagination:
 
   # Optional, the default locale to use, omit to disable (depends on a field 'locale' to be specified in the posts, 
   # in reality this can be any value, suggested are the Microsoft locale-codes (e.g. en_US, en_GB) or simply the ISO-639 language code )
-  locale: '' 
+  locale: 'it_IT'
 
  # Optional,omit or set both before and after to zero to disable. 
  # Controls how the pagination trail for the paginated pages look like. 
@@ -106,8 +106,5 @@ enable_contact: false
 
 #### Phantom Navigation menu
 enable_nav: false
-nav_item:
-  - { url: '/', text: 'Home' }
-  - { url: '/about', text: 'About' }
 
-  license: CC-BY-NC-4.0 # "CC-BY-4.0", "CC-BY-SA-4.0", "CC-BY-NC-4.0", "CC-BY-ND-4.0"
+license: CC-BY-NC-4.0 # "CC-BY-4.0", "CC-BY-SA-4.0", "CC-BY-NC-4.0", "CC-BY-ND-4.0"
